--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </style>
 </head>
 <body>
-  <img src="images/saeed.jpg" alt="Saeed Image">
+  <img src="saeed.jpg" alt="Saeed Image">
   <div class="bio">
     <h2>Saeed Suleiman</h2>
     <p>Passionate creator and tech enthusiast exploring web apps and digital experiences.</p>
