--- a/index.html
+++ b/index.html
@@ -4,39 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Saeed's Bio</title>
-  <style>
-    body {
-      background-color: #0b0c2a;
-      color: #ffffff;
-      font-family: Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-    }
-    img {
-      width: 300px;
-      height: auto;
-      border: 3px solid #00ffff;
-      border-radius: 15px;
-      margin-bottom: 20px;
-    }
-    .bio {
-      background-color: rgba(0, 255, 255, 0.1);
-      padding: 15px;
-      border-radius: 10px;
-      text-align: center;
-      max-width: 400px;
-    }
-  </style>
 </head>
-<body>
-  <img src="saeed.jpg" alt="Saeed Image">
-  <div class="bio">
-    <h2>Saeed Suleiman</h2>
-    <p>Passionate creator and tech enthusiast exploring web apps and digital experiences.</p>
-  </div>
+<body bgcolor="#0b0c2a" text="#ffffff" align="center">
+  <h2>Saeed Suleiman</h2>
+  <img src="images/sa'eed.jpg" alt="Saeed Image" width="300">
+  <p>Passionate creator and tech enthusiast exploring web apps and digital experiences.</p>
 </body>
 </html>
