Fix image source path in index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body bgcolor="#0b0c2a" text="#ffffff" align="center">
   <h2>Saeed Suleiman</h2>
-  <img src="images/sa'eed.jpg" alt="Saeed Image" width="300">
+  <img src="images/saeed.jpg" alt="images" width="300">
   <p>Passionate creator and tech enthusiast exploring web apps and digital experiences.</p>
 </body>
 </html>
